# schemate

./: .flake8  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yaml
schemate/: __init__.py  __main__.py  analyze.py  config.py  exceptions.py  loaders.py  logging.py  schemate.py  serialize.py  types.py  version.py
tests/: __init__.py  requirements.txt  test_config.py  test_loaders.py  test_schemate.py  test_types.py
