[metadata]
description_file = README.md
license_file = LICENSE

[test]
tests = True

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov=schemate --flakes --spec --cov-report=xml --cov-report term
python_files = tests/*
flakes-ignore =
    __init__.py UnusedImport
    __init__.py ImportStarUsed
    test_*.py ImportStarUsed
    test_*.py ImportStarUsage
    conftest.py UnusedVariable
    examples/* ALL
    tests/checks.py ALL
    docs/_build ALL
spec_header_format = {class_name} ({path})
filterwarnings =
    once::UserWarning
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore::FutureWarning

[flake8]
max-line-length = 88
extend-ignore = E501,E266
per-file-ignores =
    __init__.py:F401,F403
    test_*.py:F405,F403
    conftest.py:F841
exclude =
    .git
    __pycache__
    build
    dist
    tmp
    theme
    fixtures
    .github
    .vscode